Breakpoint spacing fixes

--- a/css/queries.css
+++ b/css/queries.css
@@ -16,16 +16,24 @@
   }
 }
 
-/* TODO: Fix this shit now */
 @media screen and (min-width:800px) {
   .card {
-    max-width: 85%;
+    max-width: 95%;
     flex-direction: row;
   }
 
   .hero-text {
     max-width: 50%;
     text-align: left;
+    padding: 25px 25px 0px 30px;
+  }
+
+  .lead {
+    font-size: 1.8em;
+  }
+
+  .sub-lead {
+    font-size: 14px;
   }
 
   .graphic {
@@ -43,17 +51,21 @@
   }
 }
 
-@media screen and (min-width:900px) {
+@media screen and (min-width:850px) and (max-width: 899px) {
   .lead {
-    font-size: 1.8em;
+    font-size: 2em;
   }
 
-  .sub-lead {
-    font-size: 14px;
+  .hero-text {
+    padding: 10px 30px 0px 30px;
   }
 }
 
-@media screen and (min-width:1024px) {
+@media screen and (min-width:900px) {
+  .hero-text {
+    padding: 15px 25px 0px 25px;
+  }
+
   .lead {
     font-size: 2.2em;
   }
@@ -67,19 +79,32 @@
   }
 }
 
-@media screen and (min-width:1250px) {
+@media screen and (min-width:1000px) {
   .card {
-    max-width: 80%;
+    max-width: 85%;
   }
 }
 
-@media screen and (min-width:1320px) {
+@media screen and (min-width:1100px) {
   .card {
-    max-width: 80%;
-    margin: 25px;
+    max-width: 75%;
   }
+}
 
+@media screen and (min-width:1250px) {
+  .card {
+    max-width: 70%;
+  }
+}
+
+@media screen and (min-width:1300px) {
   .lead {
     font-size: 2.4em;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .card {
+    max-width: 65%;
   }
 }
